Updated: README.org

--- a/README.org
+++ b/README.org
@@ -133,180 +133,13 @@
   Provided Shinyscreen is successfully installed this snippet will
   run it.
   #+BEGIN_SRC R
-    library(shinyscreen)
-    PROJECT="project/location/somewhere/on/my/storage/device"
-    launch(projDir=PROJECT) 
+    shinyscreen::app()
   #+END_SRC
-  The `projDir` argument can be left out in which case shinyscreen is
-  going to assume that the project directory is the result of
-  #+BEGIN_SRC R
-    ## Get current working directory of R instance.
-    getwd()
-  #+END_SRC
-
-  So, what is the /project directory/? This is the place where
-  shinyscreen state, log and output files go by default. In other
-  words, if you produce some PDF plots, this is where they are going
-  to end up.
   
-* Usage 
-** Before Starting
-***  Compound Lists
-
-    The lists of known and unknown compounds contain different
-    information and are treated differently. The application needs at
-    least one, but can take both known and unknown lists as
-    inputs. The formats of both lists are explained below.
-
-**** Known Compounds List
-     - A comma-separated CSV file table.
-     - The column names are case-sensitive.
-     - Required headers:
-       - ID :: This is an integer compound identifier. This column
-	       must be filled and each ID entry must be unique. If
-	       both unknown and known lists are given, IDs from both
-	       lists must not overlap.
-       - SMILES ::  The /SMILES/ character string. Shinyscreen accepts
-		    only MS-Ready SMILES. This column must be filled.
-       - Name :: The compound name. This column can be left empty.
-       - RT :: The retention time of the peak in minutes. This column
-	       can be left empty.
-     - Optional headers:
-       - mz :: m/z mass of the compound. If both SMILES and mz entries
-               are present for a given compound, mz takes precedence.
-
-        #+CAPTION: The first few rows of a compound list containing known compounds.
-	#+BEGIN_EXAMPLE
-	"ID","Name","SMILES","RT"
-	 33,"Isoproturon","CC(C)C1=CC=C(NC(=O)N(C)C)C=C1",19.6
-        717,"epsilon-Decalactone","CCCCC1CCCCC(=O)O1",
-         67,,"CCCCC1CCCCCC(=O)O1",
-        ...,...,...,...
-	#+END_EXAMPLE
-	It is *strongly suggested* to quote all the character strings, such
-	as SMILES and Name.
-
-**** Unknown Compounds List
-     - A comma-separated CSV file table.
-     - Required headers:
-       - ID :: This is an integer compound identifier. This column
-               must be filled and each ID entry must be unique. If
-               both unknown and known lists are given, IDs from both
-               lists must not overlap.
-       - mz :: m/z mass of the compound.
-       - RT :: The retention time of the peak in minutes. This column
-               can be left empty.
-
-
-     #+CAPTION: The first few rows of a compound list containing unknown compounds.
-     #+BEGIN_EXAMPLE
-     "ID","mz","RT"
-      22,296.1160,
-     888,503.2816,
-     #+END_EXAMPLE
-
-      
-       
-
-   
-*** The compound sets.
-
-    Shinyscreen organises its data around the concept of compound
-    sets. If, given a collection of data files, it is possible
-    to break down the compounds into logical groups, shinyscreen
-    will make it easier to navigate different groups if this is
-    specified in a CSV list. In this case, the CSV file contains two
-    columns: *ID* and *set*. The *ID* is the identifier of the
-    compound from the compound list and *set* is a name of the
-    set. If there is no sensible way of splitting compounds in
-    groups, it is enough to copy all the ID-s from the compound list
-    into a new CSV and use any character string to fill out the
-    *set* column.
-    
-    #+CAPTION: The first few rows of a compound set.
-    |  ID | set  | RT |
-    |-----+------+----|
-    |  33 | mixA |    |
-    | 717 | mixA |    |
-    | 999 | mixA |    |
-    | ... | ...  |    |
-    | 129 | mixB |    |
-    | 516 | mixB |    |
-    | ... | ...  |    |
-    | 333 | mixC |    |
-    | 999 | mixC |    |
-
-
-***  Data files
-    These should be in mzML format.
-** Sets, Tags, Adducts, Files and IDs
-   Each file is labelled by a tag, adduct and set. Sets are defined in
-   the compound set CSV file and group compounds according to their
-   IDs. Adducts correspond to the adducts. Tags label files in the
-   plots.
-
-   For known compounds, each set can contain multiple adducts. Sets of
-   unknowns can only contain a single adduct. Any files belonging to the
-   same set that have been acquired in a single adduct, must carry
-   unique tags. 
-
-   In addition, the IDs of compounds belonging to the same set/adduct
-   combination must be unique. Different ID sets may overlap.
-
-   Essentially, sets serve the purpouse of visually grouping files in
-   the plots. Also, set combines those groups of files with particular
-   collections of compounds (from the compound set CSV file).
-
-** Config Screen
-   This is the start tab. Import the compound and set lists first,
-   then proceed to import the mzML files. Provide tags in the tag text
-   box and then assign the sets, adducts and tags to the imported mzML
-   files using table widget. Once this is done, move on to the
-   ~Spectra Extraction~ tab.
-
-*** Resetting State
-    In case some inputs have been changed, but the program for some
-    reason does not seem to respond to those changes, perhaps
-    resetting the state using the button ~Reset State~ will help. This
-    will clean the current compound state tables (but, all the inputs
-    remain unchanged).
-
-*** Switching Projects
-    The ~Switch project.~ button can be used to start new projects, or
-    change between them in the middle of processing.  
-
-    Switching projects while the program is running makes most sense
-    if it is desired to change some of the inputs (e.g. different set
-    configuration, or same compound lists but different files) while
-    retaining the others. The user is presented with a directory
-    change dialogue which is then used to select the new project
-    directory. If needed, a new project directory can be created from
-    the same dialogue. All the inputs that currently exist on the
-    configuration tab will be kept during switching. This way, only
-    what needs to be changed can be changed.
-
-** Spectra Extraction
-   Set the extraction parameters and then select a certain number of
-   sets to scan for. This may take a while.
-
-   After one, or more sets have been extracted (once the status box
-   gets checked), it is possible to carry out the auto quality
-   check. This check is going to perform a rudimentary analysis of the
-   spectra, as well as retrieve the retention times of the precursor
-   peaks and their MS2 spectra. This procedure must be done in order
-   to plot the MS2 spectra.
-
-   TODO: Explain the parameters
-
-   For entries that had RT empty, the entire retention time interval
-   is scanned for peaks. Those entries with known RT will only be
-   scanned within the interval specified by the parameters (by default
-   1 min). This means that the processing is going to take much less
-   time then for the case if RT was left out.
-
-** Prescreening
-   The third tab allows the visual inspection of the spectra and the
-   chromatogram, as well as exporting the plots in a PDF format.
+* Usage
+  Shinyscreen (version > 1.0.0) is a self-documented application. The
+  best way to learn about using Shinyscreen is by running it. Please
+  let us know if we can improve on that documentation.
 
 * Thanks
   Many thanks to the students of the *Masters in Integrated Systems Biology*
