app, shiny-ui-base: datafiles output: Replace handsontable with DT
shiny-ui-base.R(render_dt,simple_style_dt): New functions.

(update_gui): Updated.

(rf_get_inp_datafiles): Removed.

(datafiles-edit): New observer.

(datafiles_b, mzml_from_inp): Update observers.

(output$datafiles): Updated.

app.Rmd(datafiles): Updated output.

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -247,8 +247,7 @@ tags.
 </details>
 
 ```{r, echo=FALSE}
-rhandsontable::rHandsontableOutput("datafiles")
-
+DT::DTOutput("datafiles",width="25%")
 ```
 
 
