shiny-ui-base,app,www: Add dropdown capability to datafiles
* shiny-ui-base (celledit_values, dt_drop_callback, editcell_script,
dropdown_dt): New functions.

(simple_style_dt): Updated.

(rf_get_inp_datafiles): Removed.

(datatab-edit): New observer.

<other observers>: Modified so they work with rv_dfiles, rv_datafiles
and dropdowns.

<renderDT>: Output renders updated.

www: cellEdit javascript and css

app: Updated controls.

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -259,7 +259,8 @@ exists, otherwise _adduct_ column is ignored).
 </details>
 
 ```{r, echo=F}
-rhandsontable::rHandsontableOutput("datatab")
+DT::DTOutput("datatab",width="25%")
+## rhandsontable::rHandsontableOutput("datatab")
 ```
 
 
