app, shiny-ui-base: Change summ_subset to DT
* shiny-ui-base(summ_subset-edit): Update observer.
(rf_get_subset): Update reactive function.

* app(summ_subset): Update control to DT from rhandsontable.

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -260,7 +260,6 @@ exists, otherwise _adduct_ column is ignored).
 
 ```{r, echo=F}
 DT::DTOutput("datatab",width="25%")
-## rhandsontable::rHandsontableOutput("datatab")
 ```
 
 
@@ -432,7 +431,7 @@ Values:
 </details>
 ```{r, echo=F}
 
-rhandsontable::rHandsontableOutput("summ_subset")
+DT::DTOutput("summ_subset")
 
 ```
 </div>
